# powerline-c

./: .gitignore  CMakeLists.txt  README.md
src/: ansi.c  ansi.h  main.c  powerline.h  print.c  print.h  utils.c
